--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    viewBinding.enabled = true
 
     defaultConfig {
         applicationId "kr.ac.sunmoon.gijoe.camaps"
