인트로 전용 테마 추가 및 네비게이션 바 색상 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 
         <activity android:name=".LoginActivity" />
         <activity android:name=".Marker" />
-        <activity android:name=".IntroActivity">
+        <activity android:name=".IntroActivity"
+            android:theme="@style/AppTheme.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
