회원가입 연결중 중간 저장

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".signupActivity"></activity>
         <activity android:name=".DetailMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -36,7 +37,8 @@
 
         <activity android:name=".LoginActivity" />
         <activity android:name=".Marker" />
-        <activity android:name=".IntroActivity"
+        <activity
+            android:name=".IntroActivity"
             android:theme="@style/AppTheme.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
