잘못된 activity xml 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".signupActivity"></activity>
+        <activity android:name=".signupActivity" />
         <activity android:name=".DetailMapActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
